// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format formats delta report 1`] = `
"
<pre>
All Files               18.57% 💔  (no change 😐)

src/                    10.00% 💔    -8.57% 😭
  bot.js               100.00% 💚  +100.00% 🎉
  cli.js                60.00% 💛   +60.00% 🎉
  format-coverage.js    35.00% 💔    -1.13% 😥
  github-comment.js     10.00% 💔   +10.00% 😍
  parse-coverage.js      0.00% ❌   -13.64% ‼️
</pre>
"
`;

exports[`format formats delta report with links 1`] = `
"
<pre>
<a href=\\"http://example.com/artifacts/index.html\\">All Files           </a>    18.57% 💔  (no change 😐)

<a href=\\"http://example.com/artifacts/src/index.html\\">src/                </a>    10.00% 💔    -8.57% 😭
<a href=\\"http://example.com/artifacts/bot.js.html\\">  bot.js            </a>   100.00% 💚  +100.00% 🎉
<a href=\\"http://example.com/artifacts/cli.js.html\\">  cli.js            </a>    60.00% 💛   +60.00% 🎉
<a href=\\"http://example.com/artifacts/format-coverage.js.html\\">  format-coverage.js</a>    35.00% 💔    -1.13% 😥
<a href=\\"http://example.com/artifacts/github-comment.js.html\\">  github-comment.js </a>    10.00% 💔   +10.00% 😍
<a href=\\"http://example.com/artifacts/parse-coverage.js.html\\">  parse-coverage.js </a>     0.00% ❌   -13.64% ‼️
</pre>
"
`;

exports[`format formats report 1`] = `
"
<pre>
All Files    18.57% 💔 

src/         18.57% 💔 
</pre>
"
`;

exports[`format formats report with links 1`] = `
"
<pre>
<a href=\\"http://example.com/artifacts/index.html\\">All Files</a>    18.57% 💔 

<a href=\\"http://example.com/artifacts/src/index.html\\">src/     </a>    18.57% 💔 
</pre>
"
`;
